; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_rme32.c_snd_rme32_reset_dac.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_rme32.c_snd_rme32_reset_dac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rme32 = type { i32, i64 }

@RME32_WCR_PD = common dso_local global i32 0, align 4
@RME32_IO_CONTROL_REGISTER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rme32*)* @snd_rme32_reset_dac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_rme32_reset_dac(%struct.rme32* %0) #0 {
  %2 = alloca %struct.rme32*, align 8
  store %struct.rme32* %0, %struct.rme32** %2, align 8
  %3 = load %struct.rme32*, %struct.rme32** %2, align 8
  %4 = getelementptr inbounds %struct.rme32, %struct.rme32* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @RME32_WCR_PD, align 4
  %7 = or i32 %5, %6
  %8 = load %struct.rme32*, %struct.rme32** %2, align 8
  %9 = getelementptr inbounds %struct.rme32, %struct.rme32* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @RME32_IO_CONTROL_REGISTER, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @writel(i32 %7, i64 %12)
  %14 = load %struct.rme32*, %struct.rme32** %2, align 8
  %15 = getelementptr inbounds %struct.rme32, %struct.rme32* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.rme32*, %struct.rme32** %2, align 8
  %18 = getelementptr inbounds %struct.rme32, %struct.rme32* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @RME32_IO_CONTROL_REGISTER, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @writel(i32 %16, i64 %21)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
